--- a/index.html
+++ b/index.html
@@ -464,6 +464,16 @@
                </div>
             </div>
          </section>
+         <form id="contact-form">
+            <input type="hidden" name="contact_number">
+            <label>Name</label>
+            <input type="text" name="user_name">
+            <label>Email</label>
+            <input type="email" name="user_email">
+            <label>Message</label>
+            <textarea name="message"></textarea>
+            <input type="submit" value="Send">
+        </form>
       </main>
       <section class="section-padding footer">
          <div class="container">
@@ -480,11 +490,34 @@
       <!-- <div id="preloader"></div>
          <a href="#" class="back-to-top"><i class="fa fa-arrow-up"></i></a> -->
       <script src="assets/js/jquery.min.js"></script>
+      <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
       <script src="assets/js/bootstrap.bundle.min.js"></script>
       <script src="assets/js/jquery.easing.min.js"></script>
       <script src="assets/js/isotope.pkgd.min.js"></script>
       <script src="assets/js/owl.carousel.min.js"></script>
       <script src="assets/js/venobox.min.js"></script>
       <script src="assets/js/main.js"></script>
+      <script type="text/javascript">
+         (function() {
+             // https://dashboard.emailjs.com/admin/integration
+             emailjs.init('bikeshsht12345@gmail.com');
+         })();
+     </script>
+     <script type="text/javascript">
+         window.onload = function() {
+             document.getElementById('contact-form').addEventListener('submit', function(event) {
+                 event.preventDefault();
+                 // generate a five digit number for the contact_number variable
+                 this.contact_number.value = Math.random() * 100000 | 0;
+                 // these IDs from the previous steps
+                 emailjs.sendForm('contact_service', 'contact_form', this)
+                     .then(function() {
+                         console.log('SUCCESS!');
+                     }, function(error) {
+                         console.log('FAILED...', error);
+                     });
+             });
+         }
+     </script>
    </body>
 </html>
