--- a/index.html
+++ b/index.html
@@ -1,3 +1,22 @@
+<?php 
+if(isset($_POST['submit'])){
+    $to = "bikeshsht12345@gmail.com"; // this is your Email address
+    $from = $_POST['email']; // this is the sender's Email address
+    $first_name = $_POST['first_name'];
+    $last_name = $_POST['last_name'];
+    $subject = "Form submission";
+    $subject2 = "Copy of your form submission";
+    $message = $first_name . " " . $last_name . " wrote the following:" . "\n\n" . $_POST['message'];
+    $message2 = "Here is a copy of your message " . $first_name . "\n\n" . $_POST['message'];
+
+    $headers = "From:" . $from;
+    $headers2 = "From:" . $to;
+    mail($to,$subject,$message,$headers);
+    mail($from,$subject2,$message2,$headers2); // sends a copy of the message to the sender
+    echo "Mail Sent. Thank you " . $first_name . ", we will contact you shortly.";
+    // You can also use header('Location: thank_you.php'); to redirect to another page.
+    }
+?>
 <!DOCTYPE html>
 <html lang="en">
    <head>
@@ -6,7 +25,6 @@
       <title>Rose Kitchen</title>
       <meta content="" name="description">
       <meta content="" name="keywords">
-      <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
       <link href="assets/img/loo.png" rel="icon">
       <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
       <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -465,16 +483,13 @@
                </div>
             </div>
          </section>
-         <form id="contact-form">
-            <input type="hidden" name="contact_number">
-            <label>Name</label>
-            <input type="text" name="user_name">
-            <label>Email</label>
-            <input type="email" name="user_email">
-            <label>Message</label>
-            <textarea name="message"></textarea>
-            <input type="submit" value="Send">
-        </form>
+         <form action="" method="post">
+            First Name: <input type="text" name="first_name"><br>
+            Last Name: <input type="text" name="last_name"><br>
+            Email: <input type="text" name="email"><br>
+            Message:<br><textarea rows="5" name="message" cols="30"></textarea><br>
+            <input type="submit" name="submit" value="Submit">
+            </form>
       </main>
       <section class="section-padding footer">
          <div class="container">
@@ -491,34 +506,11 @@
       <!-- <div id="preloader"></div>
          <a href="#" class="back-to-top"><i class="fa fa-arrow-up"></i></a> -->
       <script src="assets/js/jquery.min.js"></script>
-      
       <script src="assets/js/bootstrap.bundle.min.js"></script>
       <script src="assets/js/jquery.easing.min.js"></script>
       <script src="assets/js/isotope.pkgd.min.js"></script>
       <script src="assets/js/owl.carousel.min.js"></script>
       <script src="assets/js/venobox.min.js"></script>
       <script src="assets/js/main.js"></script>
-      <script type="text/javascript">
-         (function() {
-             // https://dashboard.emailjs.com/admin/integration
-             emailjs.init('bikeshsht12345@gmail.com');
-         })();
-     </script>
-     <script type="text/javascript">
-         window.onload = function() {
-             document.getElementById('contact-form').addEventListener('submit', function(event) {
-                 event.preventDefault();
-                 // generate a five digit number for the contact_number variable
-                 this.contact_number.value = Math.random() * 100000 | 0;
-                 // these IDs from the previous steps
-                 emailjs.sendForm('contact_service', 'contact_form', this)
-                     .then(function() {
-                         console.log('SUCCESS!');
-                     }, function(error) {
-                         console.log('FAILED...', error);
-                     });
-             });
-         }
-     </script>
    </body>
 </html>
