--- a/index.html
+++ b/index.html
@@ -1,15 +1,98 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bikesh Shrestha</title>
-</head>
-
-<body>
-    <h1>Me Bikesh Shrestha</h1>
-</body>
-
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css" integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <title>Portfolio</title>
+  </head>
+  <body>
+    <section class="header-section">
+      <div class="container">
+        <div class="header-part">
+          <div class="logo">
+            <h3>Bikesh Shresha</h3>
+          </div>
+          <div class="start-project">
+            <a href="#">Start a project</a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="hero-section">
+      <div class="container">
+        <div class="row align-self-center align-items-center">
+          <div class="col-md-4">
+            <div class="intro">
+              <h2>Hello, I am Bikesh Shrestha <span>Frontend Developer</span></h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+              <a href="#">Message Me </a>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="my-image">
+              <img src="images/1.jpg" class="myimage" alt="">
+              <div class="dots">
+                <img src="images/dots.png">
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3 offset-md-1">
+            <div class="hero-list">
+              <ul>
+                <li>
+                  <div class="hero-list-part">
+                    <h4>15</h4>
+                    <p>Satisfied Clients</p>
+                  </div>
+                </li>
+                <li>
+                  <div class="hero-list-part">
+                    <h4>100+</h4>
+                    <p>Projects Completed</p>
+                  </div>
+                </li>
+                <li>
+                  <div class="hero-list-part">
+                    <h4>2+</h4>
+                    <p>Years of Experiences</p>
+                  </div>
+                </li>
+                <li>
+                  <div class="hero-list-part">
+                    <h4>4000+</h4>
+                    <p>Hours of Work</p>
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- <section class="client-section">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8 offset-md-2">
+            <div class="client">
+              <h3>Over<strong>100+</strong>Business Growing Me</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section> -->
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  </body>
 </html>
