--- a/index.html
+++ b/index.html
@@ -13,7 +13,18 @@
     
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Portfolio</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-221386653-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-221386653-1');
+</script>
+
   </head>
+
   <body>
     <section class="header-section">
       <div class="container">
