--- a/index.html
+++ b/index.html
@@ -105,5 +105,31 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+        <script>
+  $( window ).on( "load", function() {
+   document.onkeydown = function(e) {
+     if(e.keyCode == 123) {
+      return false;
+     }
+     if(e.ctrlKey && e.shiftKey && e.keyCode == 'I'.charCodeAt(0)){
+      return false;
+     }
+     if(e.ctrlKey && e.shiftKey && e.keyCode == 'J'.charCodeAt(0)){
+      return false;
+     }
+     if(e.ctrlKey && e.keyCode == 'U'.charCodeAt(0)){
+      return false;
+     }
+    
+     if(e.ctrlKey && e.shiftKey && e.keyCode == 'C'.charCodeAt(0)){
+      return false;
+     }      
+    };
+     
+   $("html").on("contextmenu",function(){
+     return false;
+   });
+  });  
+    </script>
   </body>
 </html>
