--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
          <nav class="main-menu">
             <ul>
                <li><a href="index.html" class="active">Home</a></li>
-               <li><a href="about.html">aaaaaaaaaa</a></li>
+               <li><a href="about.html">About Us</a></li>
                <li><a href="gallery.html">Gallery</a></li>
                <li><a href="blog.html">Blog</a></li>
                <li><a href="contact.html">Contact</a></li>
@@ -130,7 +130,7 @@
                         <div class="col-md-6 js-fullheight slider-text" style="height: 919px;">
                            <div class="slider-text-inner">
                               <div class="desc">
-                                 <h2><span>BIKESH</span><br> SHRESTHA</h2>
+                                 <h2><span>ER. BIKESH</span><br> SHRESTHA</h2>
                                  <span>WEB & UI/UX DESIGNER</span>
                                  <!-- <div class="custom-btn-2">
                                     <a href="contact.html">Learn more <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"><path d="m11.293 17.293 1.414 1.414L19.414 12l-6.707-6.707-1.414 1.414L15.586 11H6v2h9.586z"></path></svg>
