--- a/ndesign/tickets.html
+++ b/ndesign/tickets.html
@@ -10,7 +10,7 @@
       <link rel="stylesheet" href="assets/vendors/glightbox/glightbox.min.css">
       <link rel="stylesheet" href="assets/vendors/swiper/swiper-bundle.min.css">
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-      <link href="assets/css/main.css" rel="stylesheet">
+      <link href="assets/css/style.css" rel="stylesheet">
    </head>
    <body class="index-page" data-aos-easing="ease-in-out" data-aos-duration="600" data-aos-delay="0">
       <header id="header" class="header position-relative">
